[gd_scene load_steps=24 format=2]

[ext_resource path="res://scripts/MagicCometPowerup.gd" type="Script" id=1]
[ext_resource path="res://assets/img/particle/sparkle1.png" type="Texture" id=2]

[sub_resource type="Gradient" id=15]
offsets = PoolRealArray( 0, 0.416149, 0.78882, 1 )
colors = PoolColorArray( 0.959961, 0.70908, 0.378735, 1, 0.987305, 0.246826, 0.246826, 1, 0.737305, 0.0576019, 0.0576019, 1, 0.105469, 0, 0, 1 )

[sub_resource type="GradientTexture" id=16]
gradient = SubResource( 15 )

[sub_resource type="Curve" id=17]
_data = [ Vector2( 0, 0.527273 ), 0.0, 0.0, 0, 0, Vector2( 0.119565, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.842391, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.254545 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=18]
curve = SubResource( 17 )

[sub_resource type="ParticlesMaterial" id=19]
emission_shape = 5
emission_ring_radius = 20.0
emission_ring_inner_radius = 0.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 12.0
gravity = Vector3( 0, 0, 0 )
angular_velocity = 197.65
angular_velocity_random = 0.48
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 18 )
color_ramp = SubResource( 16 )

[sub_resource type="CanvasItemMaterial" id=20]
blend_mode = 1

[sub_resource type="Curve" id=21]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, -360 ), 0.0, 0.0, 0, 0, Vector2( 0.266304, -17.1818 ), 0.0, 0.0, 0, 0, Vector2( 1, -279 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=22]
curve = SubResource( 21 )

[sub_resource type="Gradient" id=23]
offsets = PoolRealArray( 0, 0.186335, 0.881988, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.714286, 0.714286, 0.714286, 1, 0.941112, 0.941112, 0.941112, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=24]
gradient = SubResource( 23 )

[sub_resource type="ParticlesMaterial" id=25]
emission_shape = 1
emission_sphere_radius = 20.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_curve = SubResource( 22 )
color_ramp = SubResource( 24 )

[sub_resource type="CircleShape2D" id=9]
radius = 30.0

[sub_resource type="Animation" id=10]
resource_name = "HideParticles"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Particles2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VisiblePart:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="Curve" id=2]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, -19.6364 ), 0.0, 0.0, 0, 0, Vector2( 0.831522, -26.1818 ), 0.0, 0.0, 0, 0, Vector2( 1, -48.2727 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0, 0.130435, 0.73913, 1 )
colors = PoolColorArray( 0.752941, 0.752941, 0.752941, 0.192157, 0.828835, 0.828835, 0.828835, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 12 )

[sub_resource type="Curve" id=14]
max_value = 3.0
_data = [ Vector2( 0, 0.504545 ), 0.0, 0.0, 0, 0, Vector2( 0.733696, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1.39773 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=26]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 160.0
initial_velocity_random = 0.2
angular_velocity = 1.0
angular_velocity_curve = SubResource( 3 )
orbit_velocity = 0.05
orbit_velocity_random = 0.34
damping = 100.0
angle = 381.2
angle_random = 1.0
scale_curve = SubResource( 7 )
color = Color( 0.784314, 0.996078, 0, 1 )
color_ramp = SubResource( 5 )
hue_variation = 0.06
hue_variation_random = 0.7

[node name="MagicCometPowerup" type="Node2D"]
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 78
lifetime = 2.4
explosiveness = 0.08
randomness = 0.66
visibility_rect = Rect2( -200, -1000, 400, 4500 )
local_coords = false
process_material = SubResource( 19 )
texture = ExtResource( 2 )

[node name="VisiblePart" type="Particles2D" parent="."]
material = SubResource( 20 )
amount = 23
lifetime = 2.4
preprocess = 2.4
process_material = SubResource( 25 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/HideParticles = SubResource( 10 )

[node name="Explood" type="Particles2D" parent="."]
material = SubResource( 1 )
emitting = false
amount = 45
lifetime = 0.8
one_shot = true
explosiveness = 0.8
randomness = 0.35
local_coords = false
process_material = SubResource( 26 )
texture = ExtResource( 2 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 1.1
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -250, -10, 500, 3500 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
